--- a/.github/workflows/main_livekit-agent-azure-func.yml
+++ b/.github/workflows/main_livekit-agent-azure-func.yml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'src'   # publicamos todo src/ como wwwroot
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'src'   # folder to deploy as wwwroot
   NODE_VERSION: '20.x'                    # Node version
 
 jobs:
@@ -39,14 +39,21 @@ jobs:
           # 1️⃣ Instala dependencias
           npm install
 
-          # 2️⃣ Genera Prisma Client
+          # 2️⃣ Compila TS → JS (dejando index.js junto a cada function.json)
+          npm run build
+
+          # 3️⃣ Genera Prisma Client
           npm run prisma:generate
 
-          # 3️⃣ Aplica migraciones
-          npm run migrate:deploy
+          # 4️⃣ Verifica que Prisma Client se generó
+          if (-Not (Test-Path ".\node_modules\.prisma\client")) {
+            Write-Error "❌ Prisma Client no se generó en node_modules/.prisma/client"
+            exit 1
+          }
+          Write-Host "✅ Prisma Client OK"
 
-          # 4️⃣ Compila TS → JS
-          npm run build
+          # 5️⃣ Aplica migraciones
+          npm run migrate:deploy
 
           popd
 
@@ -80,8 +87,8 @@ jobs:
       - name: Deploy to Azure Functions
         uses: Azure/functions-action@v1
         with:
-          app-name:  'livekit-agent-azure-func'
-          slot-name: 'Production'
-          package:   '${{ github.workspace }}/functionapp-src'
-          enable-oryx-build: true
-          respect-funcignore: true
+          app-name:                         'livekit-agent-azure-func'
+          slot-name:                        'Production'
+          package:                          '${{ github.workspace }}/functionapp-src'
+          scm-do-build-during-deployment:   false
+          respect-funcignore:               true
