--- a/.github/workflows/main_livekit-agent-azure-func.yml
+++ b/.github/workflows/main_livekit-agent-azure-func.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Functions Deploy action: https://github.com/azure/functions-action
-# More GitHub Actions for Azure:       https://github.com/Azure/actions
-
 name: Build and deploy Node.js project to Azure Function App - livekit-agent-azure-func
 
 on:
@@ -10,8 +7,8 @@ on:
   workflow_dispatch:
 
 env:
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'src'   # folder to deploy as wwwroot
-  NODE_VERSION: '20.x'                    # Node version
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: 'src'
+  NODE_VERSION: '20.x'
 
 jobs:
   build:
@@ -36,25 +33,18 @@ jobs:
         run: |
           pushd ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
 
-          # 1️⃣ Instala dependencias
           npm install
-
-          # 2️⃣ Compila TS → JS (dejando index.js junto a cada function.json)
           npm run build
-
-          # 3️⃣ Genera Prisma Client
           npm run prisma:generate
 
-          # 4️⃣ Verifica que Prisma Client se generó
+          # Verifico que el cliente Prisma exista
           if (-Not (Test-Path ".\node_modules\.prisma\client")) {
             Write-Error "❌ Prisma Client no se generó en node_modules/.prisma/client"
             exit 1
           }
           Write-Host "✅ Prisma Client OK"
 
-          # 5️⃣ Aplica migraciones
           npm run migrate:deploy
-
           popd
 
       - name: Upload artifact for deploy
@@ -77,18 +67,27 @@ jobs:
           name: functionapp-src
           path: functionapp-src
 
+      - name: Verify Prisma client in artifact
+        shell: pwsh
+        run: |
+          if (-Not (Test-Path "functionapp-src\node_modules\.prisma\client")) {
+            Write-Error "❌ Prisma Client no viaja en el artifact"
+            exit 1
+          }
+          Write-Host "✅ Prisma Client presente en artifact"
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id:       ${{ secrets.AZUREAPPSERVICE_CLIENTID_B9CC5E7DD4CD4EBF84F817C7243AC885 }}
-          tenant-id:       ${{ secrets.AZUREAPPSERVICE_TENANTID_47BEC7C0624B42299932C78F6C01DF57 }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_80E5F5856F2F46CFB7B591B7CD076727 }}
+          client-id:       ${{ secrets.AZUREAPPSERVICE_CLIENTID }}
+          tenant-id:       ${{ secrets.AZUREAPPSERVICE_TENANTID }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID }}
 
       - name: Deploy to Azure Functions
         uses: Azure/functions-action@v1
         with:
-          app-name:                         'livekit-agent-azure-func'
-          slot-name:                        'Production'
-          package:                          '${{ github.workspace }}/functionapp-src'
-          scm-do-build-during-deployment:   false
-          respect-funcignore:               true
+          app-name:                       'livekit-agent-azure-func'
+          slot-name:                      'Production'
+          package:                        '${{ github.workspace }}/functionapp-src'
+          scm-do-build-during-deployment: false
+          respect-funcignore:             true
