--- a/.github/workflows/main_livekit-agent-azure-func.yml
+++ b/.github/workflows/main_livekit-agent-azure-func.yml
@@ -93,4 +93,4 @@ jobs:
 
       - name: Zip-deploy to Azure Function
         shell: pwsh
-        run: az functionapp deployment source config-zip --resource-group livekit-agent-azure --name livekit-agent-azure-func --src "./deploy.zip"
+        run: az functionapp deployment source config-zip --resource-group livekit-agent-azure --name livekit-agent-azure-func --src "${{ github.workspace }}\deploy.zip""
