--- a/.github/workflows/main_livekit-agent-azure-func.yml
+++ b/.github/workflows/main_livekit-agent-azure-func.yml
@@ -12,19 +12,15 @@ env:
 jobs:
   build:
     runs-on: windows-latest
-    permissions:
-      contents: read
+    permissions: { contents: read }
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Setup Node.js ${{ env.NODE_VER }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ env.NODE_VER }}
+      - uses: actions/setup-node@v3
+        with: { node-version: ${{ env.NODE_VER }} }
 
       - name: Install deps, build & Prisma
         shell: pwsh
@@ -43,38 +39,20 @@ jobs:
       - name: Create deploy ZIP
         shell: pwsh
         run: |
-          # Borra ZIP previo si existe
-          Remove-Item -Force ../deploy.zip -ErrorAction Ignore
-          # Empaqueta solo el contenido de src/, sin carpeta raíz
-          Compress-Archive -Path ${{ env.FUNC_SRC }}\* -DestinationPath ../deploy.zip -Force
+          Remove-Item -Force deploy.zip -ErrorAction Ignore
+          Compress-Archive -Path ${{ env.FUNC_SRC }}\* -DestinationPath deploy.zip -Force
 
       - name: Validate ZIP structure
         shell: pwsh
         run: |
-          # Extrae temporalmente para comprobaciones
-          Remove-Item -Recurse -Force ../zip-temp -ErrorAction Ignore
-          Expand-Archive -Path ../deploy.zip -DestinationPath ../zip-temp -Force
-
-          # 1) Debe existir host.json en la raíz
-          if (-Not (Test-Path "../zip-temp/host.json")) {
-            Write-Error "❌ Falta host.json en el ZIP"
-            Exit 1
+          Expand-Archive -Path deploy.zip -DestinationPath zip-temp -Force
+          if (-Not (Test-Path "zip-temp/host.json")) { Write-Error "❌ Falta host.json"; exit 1 }
+          if (Test-Path "zip-temp/src")   { Write-Error "❌ ZIP contiene carpeta src/"; exit 1 }
+          if (-Not (Test-Path "zip-temp/node_modules/.prisma/client")) {
+            Write-Error "❌ Falta node_modules/.prisma/client"; exit 1
           }
-
-          # 2) No debe existir carpeta zip-temp/src
-          if (Test-Path "../zip-temp/src") {
-            Write-Error "❌ ZIP contiene carpeta src/ en lugar de su contenido"
-            Exit 1
-          }
-
-          # 3) Debe contener node_modules/.prisma/client
-          if (-Not (Test-Path "../zip-temp/node_modules/.prisma/client")) {
-            Write-Error "❌ Falta node_modules/.prisma/client en el ZIP"
-            Exit 1
-          }
-
-          Write-Host "✅ ZIP structure OK"
-          Remove-Item -Recurse -Force ../zip-temp
+          Write-Host "✅ ZIP OK"
+          Remove-Item -Recurse -Force zip-temp
 
   deploy:
     runs-on: windows-latest
@@ -93,4 +71,4 @@ jobs:
 
       - name: Zip-deploy to Azure Function
         shell: pwsh
-        run: az functionapp deployment source config-zip --resource-group livekit-agent-azure --name livekit-agent-azure-func --src "${{ github.workspace }}\deploy.zip"
+        run: az functionapp deployment source config-zip --resource-group livekit-agent-azure --name livekit-agent-azure-func --src "./deploy.zip"
