--- a/.github/workflows/main_livekit-agent-azure-func.yml
+++ b/.github/workflows/main_livekit-agent-azure-func.yml
@@ -10,10 +10,11 @@ env:
   NODE_VER: '20.x'
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: windows-latest
     permissions:
       contents: read
+      id-token: write    # needed for azure/login
     env:
       DATABASE_URL: ${{ secrets.DATABASE_URL }}
 
@@ -49,40 +50,17 @@ jobs:
       - name: Validate ZIP structure
         shell: pwsh
         run: |
-          # Extrae para comprobaciones
           Remove-Item -Recurse -Force zip-temp -ErrorAction Ignore
           Expand-Archive -Path deploy.zip -DestinationPath zip-temp -Force
-
-          # 1) Debe existir host.json en la raíz
-          if (-Not (Test-Path "zip-temp/host.json")) {
-            Write-Error "❌ Falta host.json en el ZIP"
-            Exit 1
-          }
-
-          # 2) No debe existir carpeta zip-temp/src
-          if (Test-Path "zip-temp/src") {
-            Write-Error "❌ ZIP contiene carpeta src/ en lugar de su contenido"
-            Exit 1
-          }
-
-          # 3) Debe contener node_modules/.prisma/client
+          if (-Not (Test-Path "zip-temp/host.json"))       { Write-Error "❌ Falta host.json";       Exit 1 }
+          if (Test-Path "zip-temp/src")                    { Write-Error "❌ ZIP contiene carpeta src"; Exit 1 }
           if (-Not (Test-Path "zip-temp/node_modules/.prisma/client")) {
-            Write-Error "❌ Falta node_modules/.prisma/client en el ZIP"
-            Exit 1
+            Write-Error "❌ Falta .prisma/client"; Exit 1
           }
-
           Write-Host "✅ ZIP structure OK"
           Remove-Item -Recurse -Force zip-temp
 
-  deploy:
-    runs-on: windows-latest
-    needs: build
-    permissions:
-      id-token: write
-      contents: read
-
-    steps:
-      - name: Azure CLI Login
+      - name: Login to Azure
         uses: azure/login@v2
         with:
           client-id:       ${{ secrets.AZUREAPPSERVICE_CLIENTID_B9CC5E7DD4CD4EBF84F817C7243AC885 }}
@@ -91,4 +69,8 @@ jobs:
 
       - name: Zip-deploy to Azure Function
         shell: pwsh
-        run: az functionapp deployment source config-zip --resource-group livekit-agent-azure --name livekit-agent-azure-func --src "./deploy.zip"
+        run: |
+          az functionapp deployment source config-zip `
+            --resource-group livekit-agent-azure `
+            --name livekit-agent-azure-func `
+            --src "./deploy.zip"
